--- a/Huevitos/src/main/resources/Vistas/Home.fxml
+++ b/Huevitos/src/main/resources/Vistas/Home.fxml
@@ -6,19 +6,14 @@
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="631.0" prefWidth="415.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.HomeController">
+<AnchorPane prefHeight="600.0" prefWidth="315.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.HomeController">
 
-    <left>
-        <fx:include minWidth="-Infinity" source="Menu.fxml" />
-    </left>
-
-    <center>
-        <AnchorPane prefHeight="631.0" prefWidth="395.0">
-            <VBox layoutX="5.0" layoutY="3.0" prefHeight="625.0" prefWidth="308.0" spacing="20" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="3.0">
+    <children>
+        <AnchorPane prefHeight="600.0" prefWidth="315.0">
+            <VBox layoutX="5.0" layoutY="3.0" prefHeight="593.0" prefWidth="306.0" spacing="20" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="3.0">
 
                 <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Dashboard de Ventas" />
 
@@ -49,6 +44,6 @@
 
             </VBox>
         </AnchorPane>
-    </center>
+    </children>
 
-</BorderPane>
+</AnchorPane>
