--- a/Huevitos/src/main/resources/Vistas/Produccion.fxml
+++ b/Huevitos/src/main/resources/Vistas/Produccion.fxml
@@ -9,17 +9,13 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="615.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.ProduccionController">
-    <left>
-        <fx:include minWidth="-Infinity" source="Menu.fxml" />
-    </left>
+<AnchorPane prefHeight="607.0" prefWidth="315.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.ProduccionController">
 
-    <center>
-        <AnchorPane prefHeight="615.0" prefWidth="391.0">
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="615.0" prefWidth="315.0">
+    <children>
+        <AnchorPane prefHeight="600.0" prefWidth="315.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="596.0" prefWidth="315.0">
                <children>
                   <DatePicker fx:id="dpFecha" layoutX="83.0" layoutY="65.0" prefHeight="25.0" prefWidth="150.0" />
                   <Label layoutX="14.0" layoutY="14.0" text="Producción diaria">
@@ -58,5 +54,5 @@
                </children>
             </AnchorPane>
         </AnchorPane>
-    </center>
-</BorderPane>
+    </children>
+</AnchorPane>
