--- a/Huevitos/src/main/resources/Vistas/Egresos.fxml
+++ b/Huevitos/src/main/resources/Vistas/Egresos.fxml
@@ -12,12 +12,8 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="615.0" prefWidth="415.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.EgresosController">
-    <left>
-        <fx:include minWidth="-Infinity" source="Menu.fxml" />
-    </left>
-
-    <center>
+<AnchorPane prefHeight="600.0" prefWidth="315.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.EgresosController">
+    <children>
         <AnchorPane prefHeight="615.0" prefWidth="315.0">
          <children>
             <Label layoutX="13.0" layoutY="14.0" text="Compras">
@@ -46,5 +42,5 @@
             </TableView>
             <Separator layoutX="1.0" layoutY="369.0" prefHeight="0.0" prefWidth="315.0" />
          </children></AnchorPane>
-    </center>
-</BorderPane>
+    </children>
+</AnchorPane>
