--- a/Huevitos/src/main/resources/Vistas/Inventario.fxml
+++ b/Huevitos/src/main/resources/Vistas/Inventario.fxml
@@ -4,18 +4,14 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="600.0" prefWidth="415.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.InventarioController">
-    <left>
-        <fx:include minWidth="-Infinity" source="Menu.fxml" />
-    </left>
+<AnchorPane prefHeight="600.0" prefWidth="315.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.InventarioController">
 
-    <center>
-        <AnchorPane prefHeight="631.0" prefWidth="557.0">
+    <children>
+        <AnchorPane prefHeight="590.0" prefWidth="314.0">
          <children>
-            <VBox layoutX="7.0" layoutY="7.0" prefHeight="586.0" prefWidth="305.0">
+            <VBox layoutX="5.0" layoutY="4.0" prefHeight="586.0" prefWidth="305.0">
                <children>
                   <TitledPane fx:id="tpLotes" animated="false" onDragDetected="#onLotes" prefHeight="97.0" prefWidth="305.0" text="Lotes">
                     <content>
@@ -110,5 +106,5 @@
                </children>
             </VBox>
          </children></AnchorPane>
-    </center>
-</BorderPane>
+    </children>
+</AnchorPane>
