--- a/Huevitos/src/main/resources/Vistas/Perdidas.fxml
+++ b/Huevitos/src/main/resources/Vistas/Perdidas.fxml
@@ -7,16 +7,12 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="615.0" prefWidth="415.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.PerdidasController">
-    <left>
-        <fx:include minWidth="-Infinity" source="Menu.fxml" />
-    </left>
+<AnchorPane prefHeight="600.0" prefWidth="315.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.PerdidasController">
 
-    <center>
-        <AnchorPane prefHeight="615.0" prefWidth="440.0">
+    <children>
+        <AnchorPane layoutX="3.0" layoutY="1.0" prefHeight="599.0" prefWidth="310.0">
           <DatePicker fx:id="dpFecha" layoutX="85.0" layoutY="57.0" prefHeight="25.0" prefWidth="150.0" />
           <Label layoutX="12.0" layoutY="11.0" text="Perdidas en mi negocio">
              <font>
@@ -39,5 +35,5 @@
             </items>
           </MenuButton>
         </AnchorPane>
-    </center>
-</BorderPane>
+    </children>
+</AnchorPane>
