--- a/Huevitos/src/main/resources/Vistas/Ventas.fxml
+++ b/Huevitos/src/main/resources/Vistas/Ventas.fxml
@@ -6,16 +6,12 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="415.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.VentasController">
-    <left>
-        <fx:include minWidth="-Infinity" source="Menu.fxml" />
-    </left>
+<AnchorPane prefHeight="600.0" prefWidth="315.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huevitos.huevitos.Controller.VentasController">
 
-    <center>
-        <AnchorPane prefHeight="517.0" prefWidth="503.0">
+    <children>
+        <AnchorPane layoutX="2.0" layoutY="4.0" prefHeight="592.0" prefWidth="312.0">
          <children>
             <Label layoutX="14.0" layoutY="14.0" text="Ventas">
                <font>
@@ -34,5 +30,5 @@
             <Label layoutX="14.0" layoutY="111.0" text="Cliente" />
             <Button fx:id="btnCrear" layoutX="125.0" layoutY="315.0" mnemonicParsing="false" onAction="#onCrear" prefHeight="25.0" prefWidth="69.0" text="Crear" />
          </children></AnchorPane>
-    </center>
-</BorderPane>
+    </children>
+</AnchorPane>
